--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^6.6.2",
+    "@prismicio/helpers": "^2.3.2",
+    "@prismicio/next": "^0.1.3",
+    "@prismicio/react": "^2.4.3",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +31,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "node-sass": "^7.0.1",
     "prettier": "2.7.1",
+    "slice-machine-ui": "^0.4.1",
     "typescript": "4.7.4"
   }
 }
