--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,9 @@
   "extends": [
     "next/core-web-vitals",
     "plugin:prettier/recommended"
-  ]
+  ],
+  "rules": {
+    "react/react-in-jsx-scope":"off",
+    "@next/next/no-img-element": "off",
+  }
 }
