:recycle: refactor: implementation service component with prismic content

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,6 @@
   ],
   "rules": {
     "react/react-in-jsx-scope":"off",
-    "@next/next/no-img-element": "off",
+    "@next/next/no-img-element": "off"
   }
 }
